Minor edits to formating

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="container">
 
                 <div class="row">
-                    <div class="portfolio-details col-lg-6 order-1 order-lg-1 car" data-aos="fade-right">
+                    <div class="portfolio-details col-lg-6 order-2 order-lg-2 car" data-aos="fade-left">
                         <div class="portfolio-details-container">
                             <div class="owl-carousel portfolio-details-carousel">
                                 <div class="custom_overlay_wrapper">
@@ -136,7 +136,7 @@
                         </div>
                         <!--<img src="assets/img/about.jpg" class="img-fluid" alt="">-->
                     </div>
-                    <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-2 content" data-aos="fade-left">
+                    <div class="col-lg-6 pt-4 pt-lg-0 order-1 order-lg-1 content" data-aos="fade-right">
                         <h3>Path to Programming</h3>
                         <ul>
                             <li>
