--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <li class="drop-down">
                         <a href="#portfolio">Portfolio</a>
                         <ul>
-                            <li><a href="#">Drug Interactions</a></li>
+                            <li><a href="portfolio-details.html">Drug Interactions</a></li>
                             <li><a href="#">Clinical Compounding</a></li>
                         </ul>
                     </li>
@@ -193,8 +193,8 @@
         </section><!-- End About Section -->
         <!-- ======= Programming Skills Section ======= -->
         <div class="section-title">
-            <span>Languages</span>
-            <h2>Languages</h2>
+            <span>Top Technologies</span>
+            <h2>Top Technologies</h2>
         </div>
         <section id="clients" class="clients">
             <div class="container" data-aos="zoom-in">
@@ -327,7 +327,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="450">
                         <div class="icon-box">
-                            <div class="icon"><i class="bx bx-world"></i></div>
+                            <div class="icon"><i class="icofont-fruits"></i></div>
                             <h4><a href="">Dietetic Internship</a></h4>
                             <h5>University of Pittsburgh Medical Center – Shadyside</h5>
                             <h6>Aug 2016 - Apr 2017</h6>
@@ -341,7 +341,7 @@
 
                     <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="600">
                         <div class="icon-box">
-                            <div class="icon"><i class="icofont-fruits"></i></div>
+                            <div class="icon"><i class="icofont-medical-sign"></i></div>
                             <h4><a href="">Registered Dietitian I</a></h4>
                             <h5>HCA Houston Healthcare Clear Lake</h5>
                             <h6>Aug 2017 - Oct 2017</h6>
@@ -427,17 +427,17 @@
                         </div>
                     </div>
 
-                    <!--<div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                        <img src="assets/img/PortfolioSmaller.gif" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>App 2</h4>
-                            <p>App</p>
-                            <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+                            <h4>Personal Portfolio</h4>
+                            <p>The page you're on right now</p>
+                            <a href="assets/img/PortfolioSmaller.gif" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <!--<div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>Card 2</h4>
@@ -643,7 +643,7 @@
                 <div class=" section-title">
                     <span>Contact</span>
                     <h2>Contact</h2>
-                    <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+                    <p>Let's Work Together</p>
                 </div>
 
                 <div class="row" data-aos="fade-up">
@@ -659,7 +659,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
                             <i class="bx bx-envelope"></i>
-                            <h3>Email Me</h3>
+                            <h3>Email</h3>
                             <a href="mailto:jamesbock10@gmail.com">jamesbock10@gmail.com</a>
                         </div>
                     </div>
@@ -667,7 +667,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
                             <i class="bx bx-phone-call"></i>
-                            <h3>Let's Work Together</h3>
+                            <h3>Phone</h3>
                             <p>412-613-6129</p>
                         </div>
                     </div>
