--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/BigHearts.png" rel="icon">
+    <link href="assets/img/BigHearts.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -59,7 +59,7 @@
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo mr-auto"><a href="index.html">James Bock</a></h1>
+            <h1 class=" mr-auto"><a href="index.html">James Bock</a></h1><!--<h2>Dev</h2>-->
 
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -73,8 +73,10 @@
                     <li class="drop-down">
                         <a href="#portfolio">Portfolio</a>
                         <ul>
-                            <li><a href="portfolio-details.html">Drug Interactions</a></li>
-                            <li><a href="#">Clinical Compounding</a></li>
+                            <li><a href="DrugInteracionsdetails.html">Drug Interactions</a></li>
+                            <li><a href="CompoundingDetails.html">Clinical Compounding</a></li>
+                            <li><a href="APIdetails.html">DrugInteractionAPI</a></li>
+                            <li><a href="WebDesignDetails.html">Web design</a></li>
                         </ul>
                     </li>
                     <!--<li><a href="#pricing">Pricing</a></li>-->
@@ -126,19 +128,19 @@
                         <div class="portfolio-details-container">
                             <div class="owl-carousel portfolio-details-carousel">
                                 <div class="custom_overlay_wrapper">
-                                    <img src="assets/img/IMG_1216.jpg" style="max-height:550px; width:auto">
+                                    <img style="width:auto" src="assets/img/IMG_1216.jpg" >
                                     <div class="custom_overlay">
                                         <div class="custom_overlay_inner">
                                             <h4>Howdy!</h4>
-                                            <p>Took a professional photo while celebrating the marriage of our friends in Houston</p>
+                                            <p>Took a professional-ish photo while celebrating the marriage of our friends in Houston</p>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="custom_overlay_wrapper"><img style="max-height:550px; width:auto" src="assets/img/NICULastDay.png"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>Last Day</h4><p>After more than two years working with a fantastic care team in the Clear Lake NICU, I had to say good-bye so I could pursue my passion for developing widely impactful applications.   </p></span></div></div>
-                                <div class="custom_overlay_wrapper"><img style="max-height:550px; width:auto" src="assets/img/Porch.jpg"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>Outside</h4><p>Enjoying the Austin weather with my amazing partner, Courtney.</p></span></div></div>
-                                <div class="custom_overlay_wrapper"><img style="max-height:550px; width:auto" src="assets/img/pirogi.jpeg"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>Cooking</h4><p>Made a special batch of pierogi over the Easter holiday using sourdough starter in the dough.</p></span></div></div>
-                                <div class="custom_overlay_wrapper"><img style="max-height:550px; width:auto" src="assets/img/PreRaceMiami.jpg"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>Track</h4><p>Competing in the 400m dash at the USA Track and Field Junior Olympics as a 16 year old. Running is much more relaxing these days.</p></span></div></div>
-                                <div class="custom_overlay_wrapper"><img style="max-height:550px; width:auto" src="assets/img/SonicXL.jpg"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>SONIC</h4><p>Halloween 10 mile run dressed as my favorite classic character. The hat was oppressively hot by mile 2!</p></span></div></div>
+                                <div class="custom_overlay_wrapper"><img style="width:auto" src="assets/img/NICULastDay.png"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>Last Day</h4><p>After more than two years working with a fantastic care team in the Clear Lake NICU, I had to say good-bye so I could pursue my passion for developing widely impactful applications.   </p></span></div></div>
+                                <div class="custom_overlay_wrapper"><img style="width:auto" src="assets/img/Porch.jpg"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>Outside</h4><p>Enjoying the Austin weather with my amazing partner, Courtney.</p></span></div></div>
+                                <div class="custom_overlay_wrapper"><img style="width:auto" src="assets/img/pirogi.jpeg"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>Cooking</h4><p>Made a special batch of pierogi over the Easter holiday using sourdough starter in the dough.</p></span></div></div>
+                                <div class="custom_overlay_wrapper"><img style="width:auto" src="assets/img/PreRaceMiami.jpg"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>Track</h4><p>Competing in the 400m dash at the USA Track and Field Junior Olympics as a 16 year old. Running is much more relaxing these days.</p></span></div></div>
+                                <div class="custom_overlay_wrapper"><img style="width:auto" src="assets/img/SonicXL.jpg"><div class="custom_overlay"><span class="custom_overlay_inner"><h4>SONIC</h4><p>Halloween 10 mile run dressed as my favorite classic character. The hat was oppressively hot by mile 2!</p></span></div></div>
                             </div>
                         </div>
                         <!--<img src="assets/img/about.jpg" class="img-fluid" alt="">-->
@@ -170,6 +172,7 @@
                                     <i class="icofont-code"> </i>
                                     Given my track record for designing systems, I believed I could learn how to write applications that can solve problems
                                     on a scale that isn't feasible through spreadsheets. I'm currently in negotiations for licensing of my clinical compounding software.
+                                    Through numerous books and countless courses on sites like Pluralsight and Linkedin Learning (and Youtube) I taught myself how to build interactive applications and webpages. 
                                 </p>
                             </li>
                             <li>
@@ -413,7 +416,7 @@
                             <h4>Drug Interactions</h4>
                             <p>SMART on FHIR App</p>
                             <a href="assets/img/DrugInteractiondemoClip.gif" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                            <a href="DrugInteracionsdetails.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
@@ -422,8 +425,8 @@
                         <div class="portfolio-info">
                             <h4>Clinical Compounding</h4>
                             <p>Cross-Platform App</p>
-                            <a href="assets/img/PolicyScrollUnitChange.gif" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                            <a href="assets/img/PolicyScrollUnitChange.gif" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+                            <a href="Compoundingdetails.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
@@ -432,8 +435,18 @@
                         <div class="portfolio-info">
                             <h4>Personal Portfolio</h4>
                             <p>The page you're on right now</p>
-                            <a href="assets/img/PortfolioSmaller.gif" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-                            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                            <a href="assets/img/PortfolioSmaller.gif" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+                            <a href="WebDesigndetails.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                        <img src="assets/img/DrugInteractionAPI.png" class="img-fluid" alt="">
+                        <div class="portfolio-info">
+                            <h4>DrugInteraction API</h4>
+                            <p>Open-Source NuGet Package</p>
+                            <a href="assets/img/DrugInteractionAPI.png" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+                            <a href="APIdetails.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
