Added descriptions to all projects and updated links to icons

--- a/APIdetails.html
+++ b/APIdetails.html
@@ -2,37 +2,37 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Drug Interaction API</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+    <title>Drug Interaction API</title>
+    <meta content="" name="descriptison">
+    <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/BigHearts.png" rel="icon">
-  <link href="assets/img/BigHearts.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="assets/img/BigHearts.png" rel="icon">
+    <link href="assets/img/BigHearts.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+    <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Day - v2.0.0
-  * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <!-- =======================================================
+    * Template Name: Day - v2.0.0
+    * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
 </head>
 
 <body>
@@ -45,12 +45,12 @@
                 <i class="icofont-phone"></i> 412-613-6129
             </div>
             <div class="social-links">
-                <a href="#" class="facebook"><i class="icofont-github"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
-                <a href="#" class="skype"><i class="icofont-runner"></i></a>
-                <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-brand-playstation"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-brand-steam"></i></a>
+                <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
+                <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
+                <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
+                <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
+                <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
+                <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
 
         </div>
     </header><!-- End Header -->
-   
+
     <main id="main">
 
         <!-- ======= Breadcrumbs ======= -->
@@ -109,15 +109,15 @@
 
                     <div class="owl-carousel portfolio-details-carousel">
                         <img src="assets/img/DrugInteractionAPI.png" style="width:auto" class="img-fluid" alt="">
-                        <img src="assets/img/InteractionDetails.png" style="width:auto" class="img-fluid" alt="">
-                       
+                        <img src="assets/img/DrugInteractionAPIRepo.png" style="width:auto" class="img-fluid" alt="">
+
                     </div>
 
                     <div class="portfolio-info">
                         <h3>Project Summary</h3>
                         <ul>
                             <li><strong>Tech</strong>: C#, JSON, REST API, Git, NuGet</li>
-                            <li><strong>Libraries</strong>: NewtonsSoft</li>
+                            <li><strong>Libraries</strong>: NewtonSoft</li>
                             <li><strong>Techniques</strong>: Custom Parsing, Automated Integration Testing, API Design </li>
                             <li><strong>Start date</strong>: May, 2020</li>
                             <li><strong>Project URL</strong>: <a href="https://www.nuget.org/packages/DrugInteractionAPI/">NuGet Package</a></li>
@@ -133,9 +133,12 @@
                         Based on the custom parsing from my Drug Interaction Module, I expanded the functionalliy and created a library for modular use.
                     </p>
                     <p>
-                        Added single medication lookup endpoint .
+                        This package adds functionallity for the single medication endpoint of the drug interaction API, which returns a response of all the drugs that assert an interaction with the medication sent to the endpoint. The parser in the Drug Interaction Module only needed support for the list medication endpoint that finds interactions between members of the list.
                     </p>
-                   
+                    <p>
+                        Repository includes integration tests that verify proper access to the endpoints and that parsing is working for single and multi- drug medications.
+                    </p>
+
                 </div>
 
             </div>
@@ -209,12 +212,12 @@
                                 <i class="icofont-phone"></i> 412-613-6129
                             </div>-->
                             <div class="social-links">
-                                <a href="#" class="facebook"><i class="icofont-github"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
-                                <a href="#" class="skype"><i class="icofont-runner"></i></a>
-                                <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-brand-playstation"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-brand-steam"></i></a>
+                                <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
+                                <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
+                                <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
+                                <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
+                                <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
+                                <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
                             </div>
                         </div>
                         <div class="copyright">
