--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -45,12 +45,12 @@
                 <i class="icofont-phone"></i> 412-613-6129
             </div>
             <div class="social-links">
-                <a href="#" class="facebook"><i class="icofont-github"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
-                <a href="#" class="skype"><i class="icofont-runner"></i></a>
-                <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-brand-playstation"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-brand-steam"></i></a>
+                <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
+                <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
+                <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
+                <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
+                <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
+                <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
             </div>
         </div>
     </div>
@@ -118,7 +118,7 @@
                         <ul>
                             <li><strong>Tech</strong>: C#, Blazor, HTML, CSS, FHIR, REST API</li>
                             <li><strong>Libraries</strong>: Bootstrap, MediatR, Hl7, NewtonsSoft, MatBlazor</li>
-                            <li><strong>Techniques</strong>: Dependency injection, Channels, Asynchrony </li>
+                            <li><strong>Techniques</strong>: Dependency Injection, Channels, Asynchrony </li>
                             <li><strong>Start date</strong>: March, 2020</li>
                             <li><strong>Project URL</strong>: <a href="#">blog coming soon!</a></li>
                         </ul>
@@ -135,7 +135,8 @@
                         The module is designed with the use-case of an e-health record pinging the module with a patient ID that can be used to retrive the medications the patient is taking. The module then gathers the proper data, converts it into a readable form for the National Library of Medicine's Drug Interaction API, and parses the information returned from the API. Once the interactions are parsed, they must be connected with the order the prescriber wrote so modifications can be made if necessary based on the interactions.
                     </p>
                     <p>
-                        As shown above, the interface is adaptive so it can be accessed on mobile devices if desired.
+                        As shown above, the inter
+                        is adaptive so it can be accessed on mobile devices if desired.
                     </p>
                 </div>
 
@@ -210,12 +211,12 @@
                                 <i class="icofont-phone"></i> 412-613-6129
                             </div>-->
                             <div class="social-links">
-                                <a href="#" class="facebook"><i class="icofont-github"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
-                                <a href="#" class="skype"><i class="icofont-runner"></i></a>
-                                <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-brand-playstation"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-brand-steam"></i></a>
+                                <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
+                                <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
+                                <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
+                                <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
+                                <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
+                                <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
                             </div>
                         </div>
                         <div class="copyright">
