--- a/WebDesigndetails.html
+++ b/WebDesigndetails.html
@@ -2,37 +2,37 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Drug Interaction Project</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+    <title>Web Design</title>
+    <meta content="" name="descriptison">
+    <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="assets/img/BigHearts.png" rel="icon">
-  <link href="assets/img/BigHearts.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="assets/img/BigHearts.png" rel="icon">
+    <link href="assets/img/BigHearts.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+    <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Day - v2.0.0
-  * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <!-- =======================================================
+    * Template Name: Day - v2.0.0
+    * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
 </head>
 
 <body>
@@ -45,12 +45,14 @@
                 <i class="icofont-phone"></i> 412-613-6129
             </div>
             <div class="social-links">
-                <a href="#" class="facebook"><i class="icofont-github"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
-                <a href="#" class="skype"><i class="icofont-runner"></i></a>
-                <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-brand-playstation"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-brand-steam"></i></a>
+                <div class="social-links">
+                    <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
+                    <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
+                    <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
+                    <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
+                    <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
+                    <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
+                </div>
             </div>
         </div>
     </div>
@@ -86,7 +88,7 @@
 
         </div>
     </header><!-- End Header -->
-   
+
     <main id="main">
 
         <!-- ======= Breadcrumbs ======= -->
@@ -95,9 +97,9 @@
 
                 <ol>
                     <li><a href="index.html">Home</a></li>
-                    <li>Drug Interactions</li>
+                    <li>Web design</li>
                 </ol>
-                <h2>Drug Interactions</h2>
+                <h2>Web design</h2>
 
             </div>
         </section><!-- End Breadcrumbs -->
@@ -108,34 +110,29 @@
                 <div class="portfolio-details-container">
 
                     <div class="owl-carousel portfolio-details-carousel">
-                        <img src="assets/img/DrugInteractiondemoClip.gif" style="width:auto" class="img-fluid" alt="">
-                        <img src="assets/img/InteractionDetails.png" style="width:auto" class="img-fluid" alt="">
-                        <img src="assets/img/InteractionPhone.gif" style="width:auto; height:700px; justify-content:center" class="img-fluid" alt="">
+                        <img src="assets/img/ShortFolio.gif" style="width:auto" class="img-fluid" alt="">
+                     
                     </div>
 
                     <div class="portfolio-info">
                         <h3>Project Summary</h3>
                         <ul>
-                            <li><strong>Tech</strong>: C#, Blazor, HTML, CSS, FHIR, REST API</li>
-                            <li><strong>Libraries</strong>: Bootstrap, MediatR, Hl7, NewtonsSoft, MatBlazor</li>
-                            <li><strong>Techniques</strong>: Dependency injection, Channels, Asynchrony </li>
-                            <li><strong>Start date</strong>: March, 2020</li>
-                            <li><strong>Project URL</strong>: <a href="#">blog coming soon!</a></li>
+                            <li><strong>Tech</strong>: HTML, CSS, JavaScript, GitHub pages</li>
+                            <li><strong>Libraries</strong>: Bootstrap</li>
+                            <li><strong>Techniques</strong>: Adaptive design </li>
+                            <li><strong>Start date</strong>: May, 2020</li>
                         </ul>
                     </div>
 
                 </div>
 
                 <div class="portfolio-description">
-                    <h2>Drug Interaction Module</h2>
+                    <h2>Personal Portfolio design</h2>
                     <p>
-                        This project started as as experiment with learning Blazor and grew into a practical tool that can be used in clinical and consumer settings. 
+                        In order to find a development team to make awesome projects with, I needed a personal portfolio to show my projects. I had some experience with web technologies through Blazor, but never worked directly with JS before. Starting from a pre-built template, I was able to customize and fine-tune the layout and functions to fit my needs.
                     </p>
                     <p>
-                        The module is designed with the use-case of an e-health record pinging the module with a patient ID that can be used to retrive the medications the patient is taking. The module then gathers the proper data, converts it into a readable form for the National Library of Medicine's Drug Interaction API, and parses the information returned from the API. Once the interactions are parsed, they must be connected with the order the prescriber wrote so modifications can be made if necessary based on the interactions.
-                    </p>
-                    <p>
-                        As shown above, the interface is adaptive so it can be accessed on mobile devices if desired.
+                        The process of designing this webpage helped me demystify and enjoy, what I previously saw as unruley, the language of JavaScript.
                     </p>
                 </div>
 
@@ -160,7 +157,8 @@
                                         </p>
                                         <div class="social-links mt-3">
                                             <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                                            <a href="#" class="
+                        "><i class="bx bxl-facebook"></i></a>
                                             <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
                                             <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
                                             <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -210,12 +208,12 @@
                                 <i class="icofont-phone"></i> 412-613-6129
                             </div>-->
                             <div class="social-links">
-                                <a href="#" class="facebook"><i class="icofont-github"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
-                                <a href="#" class="skype"><i class="icofont-runner"></i></a>
-                                <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-brand-playstation"></i></a>
-                                <a href="#" class="linkedin"><i class="icofont-brand-steam"></i></a>
+                                <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
+                                <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
+                                <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
+                                <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
+                                <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
+                                <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
                             </div>
                         </div>
                         <div class="copyright">
